@@ -1,28 +1,29 @@
 package hudson.plugins.s3;
 
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotEquals;
 
-public class FingerprintRecordTest {
+class FingerprintRecordTest {
 
     @Test
-    public void testGetLinkFromWindowsPath() throws Exception {
+    void testGetLinkFromWindowsPath() throws Exception {
         String windowsPath = "path\\to\\windows\\test.txt";
         FingerprintRecord windowsRecord = new FingerprintRecord(true, "test", windowsPath, "us-eat-1", "xxxx");
         String link = windowsRecord.getLink();
-        String linkDecoded = URLDecoder.decode(link, "utf-8");
-        assertNotEquals("link is encoded", windowsPath, link);
-        assertEquals("should match file name", windowsPath, linkDecoded);
+        String linkDecoded = URLDecoder.decode(link, StandardCharsets.UTF_8);
+        assertNotEquals(windowsPath, link, "link is encoded");
+        assertEquals(windowsPath, linkDecoded, "should match file name");
     }
 
     @Test
-    public void testGetLinkFromUnixPath() throws Exception {
+    void testGetLinkFromUnixPath() throws Exception {
         String unixPath = "/path/tmp/abc";
         FingerprintRecord unixRecord = new FingerprintRecord(true, "test", unixPath, "us-eat-1", "xxxx");
-        assertEquals("should match file name", unixPath, unixRecord.getLink());
+        assertEquals(unixPath, unixRecord.getLink(), "should match file name");
     }
 }
